--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,9 @@ android {
     splits {
         abi {
             enable true
-            universalApk true
+            reset()
+            include "armeabi-v7a", "arm64-v8a"
+            universalApk false
         }
     }
 
