--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     namespace "io.nekohasekai.sfa"
     compileSdk 35
 
-    ndkVersion "28.0.12916984"
+    ndkVersion System.getenv("NDK_VERSION")
 
     def ndkPathFromEnv = System.getenv("ANDROID_NDK_HOME")
     if (ndkPathFromEnv != null) {
@@ -49,6 +49,7 @@ android {
             }
         }
         release {
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
             signingConfig signingConfigs.release
@@ -71,9 +72,9 @@ android {
     splits {
         abi {
             enable true
-            universalApk true
             reset()
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            include "armeabi-v7a", "arm64-v8a"
+            universalApk false
         }
     }
 
@@ -85,6 +86,7 @@ android {
     buildFeatures {
         viewBinding true
         aidl true
+        buildConfig true
     }
 
     applicationVariants.configureEach { variant ->
@@ -152,16 +154,7 @@ tasks.withType(KotlinCompile.class).configureEach {
 }
 
 def getProps(String propName) {
-    def propsInEnv = System.getenv("LOCAL_PROPERTIES")
-    if (propsInEnv != null) {
-        def props = new Properties()
-        props.load(new ByteArrayInputStream(Base64.decoder.decode(propsInEnv)))
-        String value = props[propName]
-        if (value != null) {
-            return value
-        }
-    }
-    def propsFile = rootProject.file("local.properties")
+    def propsFile = rootProject.file("keystore.properties")
     if (propsFile.exists()) {
         def props = new Properties()
         props.load(new FileInputStream(propsFile))
