--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ plugins {
 android {
     namespace 'io.nekohasekai.sfa'
     compileSdk 34
+    ndkVersion  getProps("NDK_VERSION")
 
     ksp {
         arg("room.incremental", "true")
@@ -42,6 +43,7 @@ android {
             }
         }
         release {
+            shrinkResources true
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.release
@@ -59,9 +61,9 @@ android {
     splits {
         abi {
             enable true
-            universalApk true
             reset()
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            include "armeabi-v7a", "arm64-v8a"
+            universalApk false
         }
     }
 
@@ -73,6 +75,7 @@ android {
     buildFeatures {
         viewBinding true
         aidl true
+        buildConfig true
     }
 
     applicationVariants.configureEach { variant ->
@@ -151,7 +154,7 @@ tasks.withType(KotlinCompile.class).configureEach {
 }
 
 def getProps(String propName) {
-    def propsFile = rootProject.file('local.properties')
+    def propsFile = rootProject.file('keystore.properties')
     if (propsFile.exists()) {
         def props = new Properties()
         props.load(new FileInputStream(propsFile))
