--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,11 +94,7 @@ jobs:
         key: libbox-${{ needs.libbox.outputs.libbox-hash }}
         fail-on-cache-miss: true
 
-    - name: Setup Java
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'oracle'
-        java-version: '20'
+    - run: echo "JAVA_HOME=${JAVA_HOME_21_X64}" >> ${GITHUB_ENV}
 
     - name: Cache Gradle
       uses: actions/cache@v3
